--- a/libpay-paypal/pom.xml
+++ b/libpay-paypal/pom.xml
@@ -2,12 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wix.pay</groupId>
     <artifactId>libpay-paypal</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>PayPal payment gateway</name>
+    <name>libpay PayPal payment gateway adapter</name>
     <description>PayPal payment gateway</description>
+
+
+    <parent>
+        <groupId>com.wix.pay</groupId>
+        <artifactId>libpay-paypal-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../libpay-paypal-parent</relativePath>
+    </parent>
+
 
     <developers>
         <developer>
@@ -32,13 +38,6 @@
             </roles>
         </developer>
     </developers>
-
-    <parent>
-        <groupId>com.wix.pay</groupId>
-        <artifactId>libpay-paypal-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-		<relativePath>../libpay-paypal-parent</relativePath>
-    </parent>
 
     <dependencies>
         <dependency>
@@ -72,7 +71,7 @@
         <dependency>
             <groupId>org.specs2</groupId>
             <artifactId>specs2-mock_${scala.dependencies.version}</artifactId>
-            <version>${org.specs2.version}</version>
+            <version>${specs2.version}</version>
         </dependency>
     </dependencies>
 </project>
