--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wix.pay</groupId>
     <artifactId>libpay-paypal-all</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>libpay module for PayPal payment gateway</name>
+    <name>libpay PayPal payment gateway adapter</name>
     <description>libpay module for PayPal payment gateway</description>
 	
     <parent>
@@ -16,17 +14,19 @@
 		<relativePath>libpay-paypal-parent</relativePath>
     </parent>
 
-    <modules>
-        <module>libpay-paypal-parent</module>
-        <module>libpay-paypal</module>
-        <module>libpay-paypal-common</module>
-        <module>libpay-paypal-testkit</module>
-    </modules>
-	
+
     <scm>
         <url>https://github.com/wix/libpay-paypal</url>
         <connection>scm:git:git://github.com/wix/libpay-paypal.git</connection>
         <developerConnection>scm:git:git@github.com:wix/libpay-paypal.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
+
+
+    <modules>
+        <module>libpay-paypal-parent</module>
+        <module>libpay-paypal</module>
+        <module>libpay-paypal-common</module>
+        <module>libpay-paypal-testkit</module>
+    </modules>
 </project>
