--- a/libpay-paypal-common/pom.xml
+++ b/libpay-paypal-common/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.wix.pay</groupId>
         <artifactId>libpay-paypal-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../libpay-paypal-parent</relativePath>
     </parent>
 
