--- a/libpay-paypal-parent/pom.xml
+++ b/libpay-paypal-parent/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.wix.pay</groupId>
     <artifactId>libpay-paypal-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>libpay PayPal payment gateway adapter parent</name>
     <description>libpay module for PayPal payment gateway parent pom</description>
@@ -46,7 +46,7 @@
 
     <scm>
         <url>https://github.com/wix/libpay-paypal</url>
-        <tag>1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
