--- a/libpay-paypal/pom.xml
+++ b/libpay-paypal/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.wix.pay</groupId>
         <artifactId>libpay-paypal-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../libpay-paypal-parent</relativePath>
     </parent>
 
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.wix.pay</groupId>
             <artifactId>libpay-paypal-common</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.http-client</groupId>
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>com.wix.pay</groupId>
             <artifactId>libpay-paypal-testkit</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
