--- a/libpay-paypal-parent/pom.xml
+++ b/libpay-paypal-parent/pom.xml
@@ -66,7 +66,7 @@
         <com.wix.hoopoe.http.version>0.0.1</com.wix.hoopoe.http.version>
         <com.google.http.client.version>1.22.0</com.google.http.client.version>
         <org.json4js.version>3.4.0</org.json4js.version>
-        <com.wix.pay.libpay.version>1.4.0</com.wix.pay.libpay.version>
+        <com.wix.pay.libpay.version>1.6.0-SNAPSHOT</com.wix.pay.libpay.version>
         <com.paypal.sdk.version>1.13.1</com.paypal.sdk.version>
     </properties>
 </project>
